[package]
authors = ["whmountains <8680147+whmountains@users.noreply.github.com>"]
description = "Mailgun client"
license = "GPL-3.0"
name = "mailgun"
repository = "https://github.com/whmountains/mailgun-rs"
version = "0.1.1"

[dependencies]
futures = "0.1.17"
hyper = "0.11.6"
tokio-core = "0.1.10"
